--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
                 <img src="/img/studant.svg" alt="estudante">
             </div>
 
-            <div class="curso-ds">
-                <img src="/img/option-ds.svg" alt="Curso de ds">
+            <div class="cursos">
+                <div class="curso-ds">
+                    <img src="/img/option-ds.svg" alt="Curso de ds">
+                </div>
+    
+                <div class="curso-redes">
+                    <img src="/img/option-redes.svg" alt="Curso de redes">
+                </div>
             </div>
-
-            <div class="curso-redes">
-                <img src="/img/option-redes.svg" alt="Curso de redes">
             </div>
-        </div>
+            
 
     </main>
 
